# mlops

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  MODEL_CARD.md  README.md  docker-compose.yml  fix_app.py  fix_cleaning.py  fix_hyper.py  fix_phase1_2.py  fix_phase3.py  fix_phase3_v2.py  fix_toml.py  fix_utils.py  pyproject.toml  requirements-lock.txt  requirements-serve.txt  requirements.txt  test_kedro.py
conf/base/: catalog.yml  parameters.yml
data/01_raw/: player_attributes.csv  player_sample.csv
data/06_models/: champion_model.pkl  champion_spec.json  serving_metadata.json
data/07_model_output/: predictions.csv
data/08_reporting/: champion_spec.json  data_quality_report.json  drift_report.json  drift_report_simulated.json  feature_importance.json  model_metrics.json  model_selection_report.json  robustness_report.json
notebooks/: exploratory_data_analysis.ipynb  model_evaluation.ipynb
report/: generate_figures.py  report.tex  robustness_experiments.py
scripts/: build_dataset.py
src/mlops_player_rating/: __init__.py  __main__.py  pipeline_registry.py  settings.py
src/mlops_player_rating/core/: modeling.py  tracking.py  utils.py
src/mlops_player_rating/pipelines/: __init__.py
src/mlops_player_rating/pipelines/data_cleaning/: __init__.py  nodes.py  pipeline.py
src/mlops_player_rating/pipelines/data_drifts/: __init__.py  nodes.py  pipeline.py
src/mlops_player_rating/pipelines/data_feat_engeneering/: nodes.py
src/mlops_player_rating/pipelines/data_feat_engineering/: nodes.py  pipeline.py
src/mlops_player_rating/pipelines/data_quality/: __init__.py  nodes.py  pipeline.py
src/mlops_player_rating/pipelines/data_split/: __init__.py  nodes.py  pipeline.py
src/mlops_player_rating/pipelines/model_predict/: __init__.py  nodes.py  pipeline.py
src/mlops_player_rating/pipelines/model_selection/: __init__.py  nodes.py  pipeline.py
src/mlops_player_rating/pipelines/model_train/: nodes.py  pipeline.py
src/mlops_player_rating/serving/: __init__.py  app.py
src/tests/: conftest.py  test_modeling.py  test_serving_api.py  test_utils.py
src/tests/pipelines/: test_data_cleaning.py  test_data_drifts.py  test_data_quality.py  test_data_split.py  test_pipeline_registry.py
