[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mlops_player_rating"
version = "0.1.0"
description = "MLOps proof-of-concept: FIFA player overall-rating prediction on the European Soccer Database (Kedro)."
readme = "README.md"
requires-python = ">=3.9"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
mlops-player-rating = "mlops_player_rating.__main__:main"

[tool.kedro]
package_name = "mlops_player_rating"
project_name = "mlops_player_rating"
kedro_init_version = "0.19.10"
tools = ["Testing"]
example_pipeline = "False"
source_dir = "src"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["src/tests"]
addopts = """
--verbose
"""

[tool.coverage.report]
fail_under = 0
show_missing = true

[tool.ruff]
line-length = 100

[tool.kedro_telemetry]
project_id = "d8a19f7946d44887addb006f53c4bc4d"

[project]
dependencies = [
  "kedro>=0.19.10,<0.20",
  "kedro-datasets[pandas-csvdataset,pandas-parquetdataset,json-jsondataset,pickle-pickledataset]>=4.1.0",
  "pandas>=2.2.0",
  "numpy>=1.26.0",
  "pyarrow>=15.0.0",
  "scipy>=1.12.0",
  "scikit-learn>=1.5.0",
  "mlflow>=2.16.0",
  "shap>=0.46.0",
  "evidently>=0.4.30",
  "matplotlib>=3.8.0",
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.29.0",
  "pydantic>=2.6.0",
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
]

[project.optional-dependencies]
serve = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.29.0",
  "pydantic>=2.6.0",
  "scikit-learn>=1.5.0",
  "pandas>=2.2.0",
  "numpy>=1.26.0",
]
